# QtFishTank

./: .gitignore  CMakeLists.txt  README.md
UnitTest/: CMakeLists.txt  CameraTest.cpp  LoggerTest.cpp
doc/: 2025_03_11_流体模拟.md  Developing docs.md
resources/: pbf2d.py  pbf3d.py
src/: Log.cpp  main.cpp
src/DataType/: Vec.h  Vec3.cpp  Vec3.h  Vec3f.cpp  Vec3f.h  Vec4.cpp  Vec4.h  Vec4f.cpp  Vec4f.h
src/core/: GLWidget.h  MainWindow.cpp  MainWindow.h
src/fluid/: FluidSimulator.cpp  FluidSimulator.h  Particle.cpp  Particle.h
src/input/: ShaderInput.cpp  ShaderInput.h  UserInputHandler.cpp  UserInputHandler.h
src/objects/: Ball.cpp  Ball.h  Fish.cpp  Fish.h
src/renderer/: Camera.cpp  Camera.h  QtRenderer.cpp  QtRenderer.h  Quat.cpp  Quat.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  screen.cpp  screen.h
src/shader/: FragmentShader.glsl  RandomFragment.glsl  VertexShader.glsl  random.glsl
